[package]
name = "backend"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "backend"
path = "backend/main.rs"

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
anyhow = "1"
argon2 = "0.5"
askama = "0.14"
axum = "0.8"
axum-macros = "0.5"
base32 = "0.5"
base64 = "0.22"
castaway = "0.2"
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.18"
derive_more = { version = "2", features = ["full"] }
dotenvy = "0.15"
html2text = "0.12"
idna = "1"
lettre = { version = "0.11", features = ["serde", "tokio1", "tokio1-native-tls"] }
percent-encoding = "2"
rand = "0.9"
regex-macro = "0.3"
reqwest = { version = "0.12", features = ["brotli", "deflate", "gzip", "json", "stream", "zstd"] }
ring = "0.17"
serde = "1"
serde_json = "1"
serde_with = "3"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["chrono", "macros", "postgres", "runtime-tokio"] }
strum = "0.27"
strum_macros = "0.27"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
totp-lite = "2"
tower = { version = "0.5", features = ["util"] }
